--- a/L6/l6.ipynb
+++ b/L6/l6.ipynb
@@ -2,27 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6f2dd6d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4cf606fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    3\n",
+      "2    5\n",
+      "3    7\n",
+      "4    9\n",
+      "Name: numbers, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1, 3, 5, 7, 9], name=\"numbers\")\n",
+    "print(s)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "31cad18d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Name  Age     City\n",
+      "0    Alice   25      NYC\n",
+      "1      Bob   30       LA\n",
+      "2  Charlie   35  Chicago\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'Age': [25, 30, 35],\n",
+    "    'City': ['NYC', 'LA', 'Chicago']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -30,7 +68,13 @@
    "id": "c819b47c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read CSV\n",
+    "df = pd.read_csv('data.csv')\n",
+    "\n",
+    "# Write CSV\n",
+    "df.to_csv('output.csv', index=False)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,7 +82,13 @@
    "id": "2d7f3d4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read Excel (requires openpyxl or xlrd)\n",
+    "df = pd.read_excel('data.xlsx', sheet_name='Sheet1')\n",
+    "\n",
+    "# Write Excel\n",
+    "df.to_excel('output.xlsx', index=False)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -46,7 +96,13 @@
    "id": "dff22960",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read JSON\n",
+    "df = pd.read_json('data.json')\n",
+    "\n",
+    "# Write JSON\n",
+    "df.to_json('output.json', orient='records')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -54,12 +110,270 @@
    "id": "3527a2d4",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# Read from SQL\n",
+    "conn = sqlite3.connect('database.db')\n",
+    "df = pd.read_sql_query('SELECT * FROM employees', conn)\n",
+    "\n",
+    "# Write to SQL\n",
+    "df.to_sql('employees', conn, if_exists='replace', index=False)\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ff2172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add new column\n",
+    "df['Salary'] = [50000, 60000, 70000]\n",
+    "df['Bonus'] = df['Salary'] * 0.1  # Calculated column\n",
+    "# Update values\n",
+    "df['Age'] = df['Age'] + 1\n",
+    "df.loc[df['City'] == 'NYC', 'Salary'] *= 1.1\n",
+    "# Rename columns\n",
+    "df.rename(columns={'Name': 'FullName', 'Age': 'Years'}, inplace=True)\n",
+    "# Drop columns\n",
+    "df.drop(columns=['City'], inplace=True)\n",
+    "# Change data types\n",
+    "df['Age'] = df['Age'].astype('int32')\n",
+    "df['JoinDate'] = pd.to_datetime(df['JoinDate'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6738e322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vertical concatenation (same columns)\n",
+    "df1 = pd.DataFrame({'A': [1, 2], 'B': [3, 4]})\n",
+    "df2 = pd.DataFrame({'A': [5, 6], 'B': [7, 8]})\n",
+    "result = pd.concat([df1, df2], ignore_index=True)\n",
+    "\n",
+    "# Horizontal concatenation (same rows)\n",
+    "df3 = pd.DataFrame({'C': [9, 10], 'D': [11, 12]})\n",
+    "result = pd.concat([df1, df3], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e49218bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample DataFrames\n",
+    "employees = pd.DataFrame({\n",
+    "    'ID': [1, 2, 3],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'DeptID': [101, 102, 101]\n",
+    "})\n",
+    "\n",
+    "departments = pd.DataFrame({\n",
+    "    'DeptID': [101, 102],\n",
+    "    'DeptName': ['HR', 'Engineering']\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e3196f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inner Join (default)\n",
+    "merged = pd.merge(employees, departments, on='DeptID')\n",
+    "\n",
+    "# Left Join\n",
+    "merged_left = pd.merge(employees, departments, on='DeptID', how='left')\n",
+    "\n",
+    "# Right Join\n",
+    "merged_right = pd.merge(employees, departments, on='DeptID', how='right')\n",
+    "\n",
+    "# Outer Join\n",
+    "merged_outer = pd.merge(employees, departments, on='DeptID', how='outer')\n",
+    "\n",
+    "# Merge on different column names\n",
+    "merged_custom = pd.merge(df1, df2, left_on='col1', right_on='col2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea6807de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "employees = pd.read_csv('employees.csv')\n",
+    "# Basic inspection\n",
+    "print(employees.info())\n",
+    "print(employees.describe())\n",
+    "# Handle missing values\n",
+    "employees['Salary'].fillna(employees['Salary'].median(), inplace=True)\n",
+    "# Remove duplicates\n",
+    "employees = employees.drop_duplicates(subset=['EmployeeID'])\n",
+    "# Add calculated column\n",
+    "employees['Bonus'] = employees['Salary'] * 0.15\n",
+    "# Group analysis\n",
+    "dept_stats = employees.groupby('Department').agg({\n",
+    "    'Salary': ['mean', 'median', 'count'],\n",
+    "    'Age': 'mean'\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af36036f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load multiple datasets\n",
+    "sales_q1 = pd.read_csv('sales_q1.csv')\n",
+    "sales_q2 = pd.read_csv('sales_q2.csv')\n",
+    "products = pd.read_excel('products.xlsx')\n",
+    "# Concatenate quarterly sales\n",
+    "all_sales = pd.concat([sales_q1, sales_q2], ignore_index=True)\n",
+    "# Merge with product info\n",
+    "sales_with_products = pd.merge(all_sales, products, on='ProductID')\n",
+    "# Calculate revenue\n",
+    "sales_with_products['Revenue'] = sales_with_products['Quantity'] * sales_with_products['Price']\n",
+    "# Group by product category\n",
+    "category_revenue = sales_with_products.groupby('Category')['Revenue'].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c6bd5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load multiple datasets\n",
+    "sales_q1 = pd.read_csv('sales_q1.csv')\n",
+    "sales_q2 = pd.read_csv('sales_q2.csv')\n",
+    "products = pd.read_excel('products.xlsx')\n",
+    "# Concatenate quarterly sales\n",
+    "all_sales = pd.concat([sales_q1, sales_q2], ignore_index=True)\n",
+    "# Merge with product info\n",
+    "sales_with_products = pd.merge(all_sales, products, on='ProductID')\n",
+    "# Calculate revenue\n",
+    "sales_with_products['Revenue'] = sales_with_products['Quantity'] * sales_with_products['Price']\n",
+    "# Group by product category\n",
+    "category_revenue = sales_with_products.groupby('Category')['Revenue'].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c69202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load customer data\n",
+    "customers = pd.read_json('customers.json')\n",
+    "\n",
+    "# Clean data\n",
+    "# 1. Standardize text\n",
+    "customers['Name'] = customers['Name'].str.title()\n",
+    "customers['Email'] = customers['Email'].str.lower()\n",
+    "\n",
+    "# 2. Handle duplicates\n",
+    "customers = customers.drop_duplicates(subset=['Email', 'Phone'])\n",
+    "\n",
+    "# 3. Fix data types\n",
+    "customers['SignupDate'] = pd.to_datetime(customers['SignupDate'])\n",
+    "customers['Age'] = pd.to_numeric(customers['Age'], errors='coerce')\n",
+    "\n",
+    "# 4. Handle outliers\n",
+    "q1 = customers['Age'].quantile(0.25)\n",
+    "q3 = customers['Age'].quantile(0.75)\n",
+    "iqr = q3 - q1\n",
+    "customers = customers[(customers['Age'] >= q1 - 1.5*iqr) & \n",
+    "                      (customers['Age'] <= q3 + 1.5*iqr)]\n",
+    "\n",
+    "# Save cleaned data\n",
+    "customers.to_csv('cleaned_customers.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "941ca80c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Fix data types\n",
+    "customers['SignupDate'] = pd.to_datetime(customers['SignupDate'])\n",
+    "customers['Age'] = pd.to_numeric(customers['Age'], errors='coerce')\n",
+    "\n",
+    "# 4. Handle outliers\n",
+    "q1 = customers['Age'].quantile(0.25)\n",
+    "q3 = customers['Age'].quantile(0.75)\n",
+    "iqr = q3 - q1\n",
+    "customers = customers[(customers['Age'] >= q1 - 1.5*iqr) & \n",
+    "                      (customers['Age'] <= q3 + 1.5*iqr)]\n",
+    "\n",
+    "# Save cleaned data\n",
+    "customers.to_csv('cleaned_customers.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f5832ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Fix data types\n",
+    "customers['SignupDate'] = pd.to_datetime(customers['SignupDate'])\n",
+    "customers['Age'] = pd.to_numeric(customers['Age'], errors='coerce')\n",
+    "\n",
+    "# 4. Handle outliers\n",
+    "q1 = customers['Age'].quantile(0.25)\n",
+    "q3 = customers['Age'].quantile(0.75)\n",
+    "iqr = q3 - q1\n",
+    "customers = customers[(customers['Age'] >= q1 - 1.5*iqr) & \n",
+    "                      (customers['Age'] <= q3 + 1.5*iqr)]\n",
+    "\n",
+    "# Save cleaned data\n",
+    "customers.to_csv('cleaned_customers.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a972a037",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
