--- a/L5/numpy_methods.ipynb
+++ b/L5/numpy_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e54addf0",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "84d0513b",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8e176417",
    "metadata": {},
    "outputs": [
@@ -121,9 +121,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.83428216, 0.21492964, 0.89916426, 0.10172813],\n",
-       "       [0.35349604, 0.46696293, 0.27980757, 0.18383092],\n",
-       "       [0.79972667, 0.03706934, 0.0965825 , 0.24173003]], dtype=float32)"
+       "array([[0.5903311 , 0.15661329, 0.11334706, 0.5445981 ],\n",
+       "       [0.9624635 , 0.49781594, 0.4359254 , 0.29999653],\n",
+       "       [0.60895747, 0.65285945, 0.6112532 , 0.7236622 ]], dtype=float32)"
       ]
      },
      "execution_count": 6,
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "98a81b33",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "eff9e627",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "       [0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fdaa5a48",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7214f512",
    "metadata": {},
    "outputs": [
@@ -276,26 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e4f9dd0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.15985831, 0.31260749, 0.67843208],\n",
-       "       [0.65813818, 0.2298551 , 0.06792812],\n",
-       "       [0.21420652, 0.69088848, 0.07942997],\n",
-       "       [0.59142333, 0.37777418, 0.4366342 ],\n",
-       "       [0.89138129, 0.09423786, 0.60615353],\n",
-       "       [0.04711071, 0.56432658, 0.35484859],\n",
-       "       [0.94224791, 0.46776381, 0.57362379],\n",
-       "       [0.26454441, 0.34576024, 0.6479056 ],\n",
-       "       [0.02093258, 0.29521267, 0.60121925],\n",
-       "       [0.50440324, 0.21711476, 0.52466155]])"
+       "array([[0.23715364, 0.12194199, 0.60915344],\n",
+       "       [0.67614027, 0.1871427 , 0.85268487],\n",
+       "       [0.56152607, 0.0722426 , 0.04995018],\n",
+       "       [0.47610446, 0.1470957 , 0.05216583],\n",
+       "       [0.89723184, 0.80321985, 0.72433638],\n",
+       "       [0.49327508, 0.8777115 , 0.37874093],\n",
+       "       [0.20015838, 0.36241216, 0.89064956],\n",
+       "       [0.47797896, 0.29140427, 0.80589868],\n",
+       "       [0.65831844, 0.16760815, 0.09255455],\n",
+       "       [0.3654886 , 0.40808137, 0.94195537]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "6df79b15",
    "metadata": {},
    "outputs": [
@@ -335,14 +335,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99df9127",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "id": "4da1a934",
    "metadata": {},
    "outputs": [],
@@ -351,7 +343,7 @@
     "zeros = np.zeros((3, 4))           # 3x4 array of zeros\n",
     "ones = np.ones((2, 2))             # 2x2 array of ones\n",
     "arange = np.arange(10)             # [0, 1, 2, ..., 9]\n",
-    "lin = np.linspace(0, 1, 5)         # [0., 0.25, 0.5, 0.75, 1.]\n",
+    "lin = np.linspace(0, 1, 5)         # [0., 0.25, 0.5, 0.75, 1.] the linspace function creates an array of 5 evenly spaced values between 0 and 1\n",
     "random = np.random.random((3, 3))  # Random values between 0 and 1\n",
     "# Create arrays like existing ones\n",
     "zeros_like = np.zeros_like(a)\n",
@@ -363,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d59531c1",
    "metadata": {},
    "outputs": [
@@ -382,7 +374,7 @@
     }
    ],
    "source": [
-    "a = np.array([1,2,3,4,5,6])\n",
+    "a= np.array([1,2,3,4,5,6])\n",
     "print(a.reshape(3, 2))   # Reshape to 3x2\n",
     "print(a.reshape(2, -1))  # -1 infers size: becomes 2x3\n",
     "print(a.ravel())         # Flatten to 1D: [1,2,3,4,5,6]\n",
@@ -391,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "84454689",
    "metadata": {},
    "outputs": [
@@ -407,14 +399,14 @@
     }
    ],
    "source": [
-    "a = np.arange(10).reshape(5, 2)  # 5x2 array\n",
+    "a= np.arange(10).reshape(5, 2)  # 5x2 array\n",
     "print(a.T)                       # Transpose: 2x5\n",
     "print(a.transpose((1, 0)))       # Same as .T\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c53a204e",
    "metadata": {},
    "outputs": [
@@ -430,14 +422,14 @@
     }
    ],
    "source": [
-    "arr = np.array([1, 2, 3, 4])\n",
+    "arr= np.array([1, 2, 3, 4])\n",
     "for element in arr:\n",
     "    print(element)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "44865777",
    "metadata": {},
    "outputs": [
@@ -464,7 +456,7 @@
     }
    ],
    "source": [
-    "# itrate over a multi-dimensional  array\n",
+    "#itrate over a multi-dimensional  array\n",
     "matrix = np.array([[1, 2], [3, 4], [5, 6]])\n",
     "\n",
     "# Iterate over rows\n",
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bbfe33ea",
    "metadata": {},
    "outputs": [
@@ -511,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e30bca68",
    "metadata": {},
    "outputs": [
@@ -528,7 +520,7 @@
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
+    "a= np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
     "print(a + b)   # Addition: [5, 7, 9]\n",
     "print(a - b)   # Subtraction: [-3, -3, -3]\n",
@@ -539,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cda50a63",
    "metadata": {},
    "outputs": [
@@ -549,20 +541,20 @@
        "array([ True,  True,  True])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
+    "a= np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
     "a<b  # Element-wise comparison: [True, True, True]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "69acb881",
    "metadata": {},
    "outputs": [
@@ -575,7 +567,7 @@
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
+    "a= np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
     "# In-place division: a becomes [0.25, 0.4, 0.5]\n",
     "print(a/b)  # [0.25, 0.4, 0.5]\n"
@@ -583,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "802a38bb",
    "metadata": {},
    "outputs": [
@@ -596,7 +588,7 @@
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
+    "a= np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
     "dot_product = np.dot(a, b)  # 1*4 + 2*5 + 3*6 = 32\n",
     "print(dot_product)          # Output: 32\n"
@@ -607,9 +599,22 @@
    "execution_count": 36,
    "id": "761dc508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 22]\n",
+      " [43 50]]\n",
+      "[[19 22]\n",
+      " [43 50]]\n",
+      "[[19 22]\n",
+      " [43 50]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Matrix Multiplication (2D arrays)\n",
+    "# Matrix Multiplication (2D arrays)\n",
     "A = np.array([[1, 2], [3, 4]])  # 2x2\n",
     "B = np.array([[5, 6], [7, 8]])  # 2x2\n",
     "# Method 1: np.dot()\n",
@@ -619,31 +624,62 @@
     "# Method 2: @ operator (Python 3.5+)\n",
     "D = A @ B  # Same result\n",
     "# Method 3: np.matmul()\n",
-    "E = np.matmul(A, B)  # Same result\n"
+    "E = np.matmul(A, B)  # Same result\n",
+    "print(C)  # [[19, 22], [43, 50]]\n",
+    "print(D)  # [[19, 22], [43, 50]]\n",
+    "print(E)  # [[19, 22], [43, 50]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "dcd0e165",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23 53 83]\n"
+     ]
+    }
+   ],
    "source": [
-    "#matrix-vector multiplication\n",
+    "# matrix-vector multiplication\n",
     "M = np.array([[1, 2], [3, 4], [5, 6]])  # 3x2\n",
     "v = np.array([7, 8])                    # 2-element vector\n",
     "result = M @ v  # Results in 3-element vector\n",
-    "# [1*7+2*8, 3*7+4*8, 5*7+6*8] = [23, 53, 83]\n"
+    "# [1*7+2*8, 3*7+4*8, 5*7+6*8] = [23, 53, 83]\n",
+    "print(result)  # [23, 53, 83]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "52bdac2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Identity Matrix:\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "Transpose of A:\n",
+      " [[1 4]\n",
+      " [2 5]\n",
+      " [3 6]]\n",
+      "Inverse of square_matrix:\n",
+      " [[ 0.6 -0.7]\n",
+      " [-0.2  0.4]]\n",
+      "Determinant of square_matrix: 10.000000000000002\n"
+     ]
+    }
+   ],
    "source": [
-    "#Matrix Properties and Operations\n",
+    "# Matrix Properties and Operations\n",
     "# Identity matrix\n",
     "I = np.eye(3)  # 3x3 identity\n",
     "# Matrix transpose\n",
@@ -651,9 +687,13 @@
     "A_T = A.T\n",
     "# Matrix inverse\n",
     "square_matrix = np.array([[4, 7], [2, 6]])\n",
-    "inv = np.linalg.inv(square_matrix)\n",
+    "inv = np.linalg.inv(square_matrix)# this computes the inverse of the square matrix using numpy's linear algebra module. \n",
     "# Determinant\n",
-    "det = np.linalg.det(square_matrix)\n"
+    "det = np.linalg.det(square_matrix)# this computes the determinant of the square_matrix using numpy's linear algebra module. \n",
+    "print(\"Identity Matrix:\\n\", I)\n",
+    "print(\"Transpose of A:\\n\", A_T)\n",
+    "print(\"Inverse of square_matrix:\\n\", inv)\n",
+    "print(\"Determinant of square_matrix:\", det)"
    ]
   },
   {
@@ -661,9 +701,21 @@
    "execution_count": null,
    "id": "f5668843",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[1 2 3 4]\n",
+      "[1 5 9]\n",
+      "[[ 7  8]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
    "source": [
-    "arr = np.array([[1, 2, 3, 4],\n",
+    "arr= np.array([[1, 2, 3, 4],\n",
     "                [5, 6, 7, 8],\n",
     "                [9, 10, 11, 12]])\n",
     "# Single element\n",
@@ -679,9 +731,18 @@
    "execution_count": null,
    "id": "326cbff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  7  8  9 10 11 12]\n",
+      "[ 2 12]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Boolean indexing\n",
+    "#Boolean indexing\n",
     "mask = arr > 5\n",
     "print(arr[mask])     # Elements > 5: [6, 7, 8, 9, 10, 11, 12]\n",
     "# Fancy indexing\n",
@@ -690,15 +751,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4c96b044",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a.sum() # sum all entries \n",
     "a.sum(axis=0) # sum over rows \n",
-    "a.sum(axis=1) # sum over columns \n",
-    "a.sum(axis=1, keepdims=True) \n"
+    "#a.sum(axis=1) # sum over columns \n",
+    "#a.sum(axis=1, keepdims=True) \n"
    ]
   },
   {
@@ -706,9 +778,17 @@
    "execution_count": null,
    "id": "923b67fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 12 13]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Adding scalar to array\n",
+    "#Adding scalar to array\n",
     "arr = np.array([1, 2, 3])\n",
     "print(arr + 10)  # [11, 12, 13]\n",
     "# Adding vector to matrix\n",
@@ -719,19 +799,18 @@
     "#  [14, 25, 36],\n",
     "#  [17, 28, 39]]\n",
     "# Broadcasting rules example\n",
-    "A = np.ones((2, 3, 4))  # 2x3x4\n",
+    "A = np.ones((2, 3, 4))  # 2x3x4 3D array\n",
     "B = np.ones((3, 4))     # 3x4\n",
     "C = A + B  # Works! B broadcasts to shape (1,3,4) then (2,3,4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "555b35ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# SLOW: Python loop\n",
     "def slow_sum(arr):\n",
     "    total = 0\n",
