--- a/L6/ass_answer.ipynb
+++ b/L6/ass_answer.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "db3d516a",
+   "metadata": {},
+   "source": [
+    "hands on lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566613f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b11597f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d493de5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c240b9a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9115eb8d",
+   "metadata": {},
+   "source": [
+    "assignment answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "55049b7b",
