--- a/L6/ass_answer.ipynb
+++ b/L6/ass_answer.ipynb
@@ -14,7 +14,18 @@
    "id": "566613f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Load data from CSV, Excel, and JSON files\n",
+    "Combine them into a single DataFrame\n",
+    "Save combined data to SQLite database\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "df=pd.read_csv(\"\")\n",
+    "df1=pd.read_excel(\"\")\n",
+    "df2=pd.read_json(\"\")\n",
+    "main_df=pd.concat([df, df1, df2], ignore_index=True)\n",
+    "main_df.to_sql(\"combined_data\", con=\"sqlite:///combined_data.db\", if_exists=\"replace\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,7 +33,14 @@
    "id": "b11597f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Identify duplicates based on multiple columns\n",
+    "Decide which duplicates to keep (most complete record)\n",
+    "Create a clean version without duplicates\n",
+    "\"\"\"\n",
+    "duplicate_columns = ['name', 'email']  # Example columns to check for duplicates\n",
+    "clean_df = main_df.drop_duplicates(subset=duplicate_columns, keep='first')  # Keep the first occurrence\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -30,7 +48,18 @@
    "id": "d493de5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Merge sales data with customer and product info\n",
+    "Handle mismatched keys and missing data\n",
+    "Calculate customer lifetime value\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "sales_df = pd.read_csv(\"sales.csv\")\n",
+    "customers_df = pd.read_csv(\"customers.csv\")\n",
+    "products_df = pd.read_csv(\"products.csv\")\n",
+    "merged_df = sales_df.merge(customers_df, on='customer_id', how='left').merge(products_df, on='product_id', how='left')\n",
+    "merged_df['lifetime_value'] = merged_df['quantity'] * merged_df['price']\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,7 +67,56 @@
    "id": "c240b9a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Build a pipeline that:\n",
+    "Reads raw data from multiple sources\n",
+    "Cleans and standardizes data\n",
+    "Removes duplicates and handles missing values\n",
+    "Merges related datasets\n",
+    "Performs aggregations\n",
+    "Exports results to multiple formats\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "# Step 1: Read raw data from multiple sources\n",
+    "sales_df = pd.read_csv(\"sales.csv\") \n",
+    "customers_df = pd.read_csv(\"customers.csv\")\n",
+    "products_df = pd.read_csv(\"products.csv\")\n",
+    "# Step 2: Clean and standardize data (example: fill missing values)\n",
+    "sales_df['quantity'].fillna(0, inplace=True)    \n",
+    "# Step 3: Remove duplicates\n",
+    "sales_df.drop_duplicates(inplace=True)\n",
+    "# Step 4: Merge related datasets\n",
+    "merged_df = sales_df.merge(customers_df, on='customer_id', how='left').merge(products_df, on='product_id', how='left')\n",
+    "# Step 5: Perform aggregations (example: total sales by customer)\n",
+    "customer_sales = merged_df.groupby('customer_id')['quantity'].sum().reset_index()\n",
+    "# Step 6: Export results to multiple formats\n",
+    "customer_sales.to_csv(\"customer_sales.csv\", index=False)\n",
+    "customer_sales.to_excel(\"customer_sales.xlsx\", index=False)\n",
+    "customer_sales.to_json(\"customer_sales.json\", orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24cfe875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"# Your task: Complete this pipeline\n",
+    "def clean_data_pipeline(input_csv, output_csv):\n",
+    "    # 1. Read data\n",
+    "    df = pd.read_csv(input_csv)\n",
+    "        # 2. Clean column names (strip, lowercase)\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "        # 3. Handle missing values (your logic)\n",
+    "        # 4. Remove duplicates (your logic)\n",
+    "        # 5. Fix data types (your logic)\n",
+    "        # 6. Save cleaned data\n",
+    "    df.to_csv(output_csv, index=False)\n",
+    "    return df\n",
+    "\"\"\"\n",
+    "#done beforeS"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "74e6030d",
    "metadata": {},
    "outputs": [
@@ -391,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fb97d05e",
    "metadata": {},
    "outputs": [
