--- a/L6/l6.ipynb
+++ b/L6/l6.ipynb
@@ -3,16 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f2dd6d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "4cf606fc",
    "metadata": {},
    "outputs": [
@@ -37,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "31cad18d",
    "metadata": {},
    "outputs": [
@@ -146,10 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6738e322",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   A  B   C   D\n",
+      "0  1  3   9  11\n",
+      "1  2  4  10  12\n"
+     ]
+    }
+   ],
    "source": [
     "# Vertical concatenation (same columns)\n",
     "df1 = pd.DataFrame({'A': [1, 2], 'B': [3, 4]})\n",
@@ -158,12 +158,13 @@
     "\n",
     "# Horizontal concatenation (same rows)\n",
     "df3 = pd.DataFrame({'C': [9, 10], 'D': [11, 12]})\n",
-    "result = pd.concat([df1, df3], axis=1)\n"
+    "result = pd.concat([df1, df3], axis=1)\n",
+    "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e49218bb",
    "metadata": {},
    "outputs": [],
@@ -303,58 +304,6 @@
     "# Save cleaned data\n",
     "customers.to_csv('cleaned_customers.csv', index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "941ca80c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Fix data types\n",
-    "customers['SignupDate'] = pd.to_datetime(customers['SignupDate'])\n",
-    "customers['Age'] = pd.to_numeric(customers['Age'], errors='coerce')\n",
-    "\n",
-    "# 4. Handle outliers\n",
-    "q1 = customers['Age'].quantile(0.25)\n",
-    "q3 = customers['Age'].quantile(0.75)\n",
-    "iqr = q3 - q1\n",
-    "customers = customers[(customers['Age'] >= q1 - 1.5*iqr) & \n",
-    "                      (customers['Age'] <= q3 + 1.5*iqr)]\n",
-    "\n",
-    "# Save cleaned data\n",
-    "customers.to_csv('cleaned_customers.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f5832ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Fix data types\n",
-    "customers['SignupDate'] = pd.to_datetime(customers['SignupDate'])\n",
-    "customers['Age'] = pd.to_numeric(customers['Age'], errors='coerce')\n",
-    "\n",
-    "# 4. Handle outliers\n",
-    "q1 = customers['Age'].quantile(0.25)\n",
-    "q3 = customers['Age'].quantile(0.75)\n",
-    "iqr = q3 - q1\n",
-    "customers = customers[(customers['Age'] >= q1 - 1.5*iqr) & \n",
-    "                      (customers['Age'] <= q3 + 1.5*iqr)]\n",
-    "\n",
-    "# Save cleaned data\n",
-    "customers.to_csv('cleaned_customers.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a972a037",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
