--- a/L9_L10/data_structure.ipynb
+++ b/L9_L10/data_structure.ipynb
@@ -2,32 +2,140 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b116b7c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task1\n",
+      "deque(['Task2', 'Task3'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Queue Implementation\n",
+    "from collections import deque\n",
+    "\n",
+    "queue = deque()\n",
+    "\n",
+    "queue.append(\"Task1\")\n",
+    "queue.append(\"Task2\")\n",
+    "queue.append(\"Task3\")\n",
+    "\n",
+    "print(queue.popleft())\n",
+    "print(queue)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "81c303bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "20\n",
+      "[10, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Stack Implementation\n",
+    "stack = []\n",
+    "\n",
+    "stack.append(10)\n",
+    "stack.append(20)\n",
+    "stack.append(30)\n",
+    "\n",
+    "print(stack.pop())\n",
+    "print(stack[-1])\n",
+    "print(stack)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4eb8ee96",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Balanced Parentheses Checker\n",
+    "def is_balanced(expr):\n",
+    "    stack = []\n",
+    "    pairs = {')': '(', '}': '{', ']': '['}\n",
+    "\n",
+    "    for ch in expr:\n",
+    "        if ch in '({[':\n",
+    "            stack.append(ch)\n",
+    "        elif ch in ')}]':\n",
+    "            if not stack or stack.pop() != pairs[ch]:\n",
+    "                return False\n",
+    "    return not stack\n",
+    "\n",
+    "print(is_balanced(\"({[]})\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab05b2a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'High Priority Task')\n",
+      "(2, 'Low Priority Task')\n",
+      "(3, 'Very Low Priority Task')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Priority Queue\n",
+    "import heapq\n",
+    "\n",
+    "pq = []\n",
+    "heapq.heappush(pq, (2, \"Low Priority Task\"))\n",
+    "heapq.heappush(pq, (1, \"High Priority Task\"))\n",
+    "heapq.heappush(pq, (3, \"Very Low Priority Task\"))\n",
+    "\n",
+    "while pq:\n",
+    "    print(heapq.heappop(pq))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
