--- a/L9_L10/data_structure.ipynb
+++ b/L9_L10/data_structure.ipynb
@@ -117,6 +117,86 @@
     "while pq:\n",
     "    print(heapq.heappop(pq))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8889c840",
+   "metadata": {},
+   "source": [
+    "2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "29909089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def append(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if not self.head:\n",
+    "            self.head = new_node\n",
+    "            return\n",
+    "\n",
+    "        current = self.head\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "\n",
+    "        current.next = new_node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6ec8f9c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def append(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if not self.head:\n",
+    "            self.head = new_node\n",
+    "            return\n",
+    "\n",
+    "        current = self.head\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "\n",
+    "        current.next = new_node\n",
+    "        new_node.prev = current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce4d2228",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
