--- a/L11_L12/algorithm.ipynb
+++ b/L11_L12/algorithm.ipynb
@@ -2,32 +2,202 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ee50eca3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Bubble Sort\n",
+    "def bubble_sort(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr)-i-1):\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aaf75f14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Merge Sort\n",
+    "def merge_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "\n",
+    "    mid = len(arr)//2\n",
+    "    left = merge_sort(arr[:mid])\n",
+    "    right = merge_sort(arr[mid:])\n",
+    "\n",
+    "    return merge(left, right)\n",
+    "\n",
+    "def merge(l, r):\n",
+    "    result = []\n",
+    "    while l and r:\n",
+    "        result.append(l.pop(0) if l[0] < r[0] else r.pop(0))\n",
+    "    return result + l + r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b6a6ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Quick Sort\n",
+    "def quick_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    pivot = arr[0]\n",
+    "    left = [x for x in arr[1:] if x <= pivot]\n",
+    "    right = [x for x in arr[1:] if x > pivot]\n",
+    "    return quick_sort(left) + [pivot] + quick_sort(right)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a4ccba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Heap Sort\n",
+    "import heapq\n",
+    "\n",
+    "def heap_sort(arr):\n",
+    "    heapq.heapify(arr)\n",
+    "    return [heapq.heappop(arr) for _ in range(len(arr))]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa0580c4",
+   "metadata": {},
+   "source": [
+    "Assignment 1: Benchmark all sorting algorithms with different dataset sizes."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6a6ad0",
+   "id": "50be25cf",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4af0069",
+   "metadata": {},
+   "source": [
+    "Assignment 2: Implement hybrid sorting algorithm combining two methods.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28ffc5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77b38a14",
+   "metadata": {},
+   "source": [
+    "L12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "097516fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Linear Search\n",
+    "def linear_search(arr, x):\n",
+    "    for i in arr:\n",
+    "        if i == x:\n",
+    "            return True\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "58429d79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Binary Search\n",
+    "def binary_search(arr, x):\n",
+    "    low, high = 0, len(arr)-1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high)//2\n",
+    "        if arr[mid] == x:\n",
+    "            return True\n",
+    "        elif arr[mid] < x:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "32371b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fibonacci (DP – Memoization)\n",
+    "memo = {}\n",
+    "def fib(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    if n not in memo:\n",
+    "        memo[n] = fib(n-1) + fib(n-2)\n",
+    "    return memo[n]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e7f1eb19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fibonacci (Tabulation)\n",
+    "def fib_tab(n):\n",
+    "    dp = [0,1]\n",
+    "    for i in range(2,n+1):\n",
+    "        dp.append(dp[i-1] + dp[i-2])\n",
+    "    return dp[n]\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
